2008-07-01  David Bateman  <dbateman@free.fr>
	
	* pr-output.cc (static inline std::string rational_approx (double, 
	int)): Test for underflow of fractional part of rational approximation
	earlier in the loop.

2009-07-01  Joe Rothweiler <octaveuser@sensicomm.com>

	* input.cc (raw_mode): Use TCSADRAIN if no wait.

2009-06-30  Jaroslav Hajek  <highegg@gmail.com>

	* symtab.h (force_variable): Remove assertion.

2009-06-28  Michael Goffioul  <michael.goffioul@gmail.com>

	* Makefile.in (INCLUDES): Install txt-eng.h and txt-eng-ft.h.
	* gl-render.cc (opengl_renderer::draw_text): Fix bitmap offset
	computation for 90x rotated text.
	* txt-eng-ft.cc (ft_render::render): Compute bitmap pixels correctly
	for 90x rotated text.

	* gl-render.cc (opengl_renderer::draw(text::properties)): Don't do
	anything if the bitmap data is empty. Issue a warning instead of
	an error if Freetype library is not available.
	* txt-eng-ft.cc (ft_manager::do_get_font): Small change in error
	string (add prefix).
	(ft_render::render): Don't do anything if the bitmap data is empty.

2009-06-28  Jaroslav Hajek  <highegg@gmail.com>

	* symtab.h (erase_scope (void *)): Remove overload.

2009-06-26  Michael Goffioul  <michael.goffioul@gmail.com>

	* txt-eng.h: New file for simple text engine.
	* txt-eng.h, txt-eng.cc: Freetype based text render engine.
	* Makefile.in: Add txt-eng-ft.cc to list of source files.
	* gl-render.h (opengl_renderer::draw_text, opengl_renderer::set_font,
	opengl_renderer::draw(text::properties)): New method to support text
	rendering using the Freetype renderer.
	(opengl_renderer::text_renderer): New field for text rendering.
	* gl-render.cc (opengl_renderer::draw(graphics_object)): Support text
	object.
	(opengl_renderer::draw(figure::properties)): Setup alpha test.
	(opengl_renderer::draw(axes::properties)): Render tick labels, hide
	labels for depth axes and fix a problem in calling
	graphics_object::get(char*).