@@ -1,3 +1,10 @@
+2009-07-01  Jaroslav Hajek  <highegg@gmail.com>
+
+	* symtab.h (symbol_table::get_fcn_info): New private static method.
+	(symbol_record_rep::finfo): New field.
+	* symtab.cc (symbol_record::find): Use cached finfo if possible,
+	cache on successful queries.
+
 2008-07-01  David Bateman  <dbateman@free.fr>
 	
 	* pr-output.cc (static inline std::string rational_approx (double, 
